--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-
+# JDBC config
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#3306 -MariaDB, 3308-MySql
+spring.datasource.url=jdbc:mysql://localhost:3308/shoe?useUnicode=true&character_set_server=utf8mb4&connectionCollation=utf8mb4_unicode_ci&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.test-while-idle=true
+spring.datasource.validation-query=SELECT 1
+spring.datasource.hikari.connection-init-sql= SET NAMES 'utf8mb4'
+# Hibernate config
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+# Logging config
+logging.file.name=D:/My Projects/log/shoezone.log
+# Security config
+spring.security.user.name=user
+spring.security.user.password=password
